# nwp-forecast-zarr-creator

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPING.md  Dockerfile  README.md  build_indexes_and_refs.sh  docker-compose.dev.yml  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
eccodes_definitions/grib2/localConcepts/ekmi/: units.def
notebooks/: gribscan_output.ipynb  height_above_ground_fields.ipynb  pressure_levels.ipynb  tmep.ipynb  tmep.py
scripts/: create_sample_plot.py
tests/: test_transforms.py
zarr-creator/: __main__.py  arguments.py  config.py  read_source.py  run.py  write_zarr.py
zarr_creator/: __init__.py  __main__.py  build_indexes.py  config.py  grib_definitions.py  local_grib_definitions_path.py  pressure_levels.py  read_source.py  transforms.py  write_zarr.py
zarr_creator/eccodes_definitions/grib2/localConcepts/ekmi/: name.def  paramId.def  shortName.def
