[project]
name = "zarrcreator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kasper Stener Hintz", email = "kah@dmi.dk"},
]
dependencies = [
    "loguru>=0.7.3",
        "rechunker>=0.5.2",
    "fsspec>=2024.12.0",
    "dmidc[harmonie-grib] @ file:///home/ec2-user/data-catalog",
    "ipdb>=0.13.13",
    "dask<=2024.11.2",
    "zarrdump>=0.4.2",
    "s3fs>=2025.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.isort]
profile = "black"
